--- a/servicos.css
+++ b/servicos.css
@@ -7,6 +7,10 @@
     text-decoration: none;
 }
 
+a{
+    color: #FFF;
+}
+
 body{
     background: #481A50;
     overflow-x: hidden;
@@ -28,6 +32,10 @@ body{
     gap: 2rem;
     right: 50px;
     cursor: pointer;
+}
+
+.buttons button:hover{
+    background-color: #c49cd6;
 }
 
 .nav-bar img{
@@ -105,7 +113,6 @@ btn:hover{
 }
 
 .right img{
-    width: 80%;
     height: 100%;   
 }
 
