--- a/home.css
+++ b/home.css
@@ -149,7 +149,8 @@ button:hover{
 bnt:hover{
     background-color: #c49cd6;
     color: #fff;
-    transition: 0.4s;}
+    transition: 0.4s;
+}
 
 .right-page > img{
     width: 60%;
@@ -157,8 +158,8 @@ bnt:hover{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 5rem;
     margin-bottom: 0;
+    margin-top: 1rem;
 }
 
 .rodape-mobile{
